<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sub"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bharti.materialdesign.SubActivity">

    <include layout="@layout/app_bar"
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:id="@+id/linlayout"
        android:padding="15dp"
        android:layout_below="@+id/appBar">
        <Button
            android:text="Take picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="takePicture"
            android:id="@+id/button3" />

        <Button
            android:text="Pick from Gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:onClick="pickImages"
            android:id="@+id/button2"
            android:layout_weight="0.21" />
    </LinearLayout>

    <Button
        android:text="Download Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:id="@+id/button4"
        android:onClick="download"
        android:layout_below="@+id/linlayout"

        android:layout_marginTop="62dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_below="@+id/button4"
        android:layout_marginTop="45dp"
        android:id="@+id/imageView" />

</RelativeLayout>
