<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/minion"
        tools:context="com.example.bharti.materialdesign.MainActivity">

        <include layout="@layout/app_bar"
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />


        <TextView
            android:text="Love Disha"
            android:layout_below="@+id/appBar"
            android:paddingTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/textView" />

        <Button
            android:text="Animate me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="animateMe"
            android:layout_marginTop="31dp"
            android:id="@+id/button"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/musicButton"
            android:onClick="playMusic"
            android:text="Play Music"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/button"
            android:layout_alignEnd="@+id/button" />



    </RelativeLayout>
    <fragment
        android:layout_width="280dp"
        android:id="@+id/nav"
        android:layout_height="match_parent"
        app:layout="@layout/fragment_nav"
        android:layout_gravity="start"
        android:name="com.example.bharti.materialdesign.NavFragment"
        tools:layout="@layout/fragment_nav"

        />
</android.support.v4.widget.DrawerLayout>

