<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.bharti.MaterialDesign.MainActivity">
    <item
        android:id="@+id/settings"
        android:title="Settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/getHelp"
        android:title="Help"
        android:orderInCategory="100"
        android:showAsAction="always"
        />
    <item android:id="@+id/navigate"
        android:title="@string/next"
        android:orderInCategory="2222"
        app:showAsAction="always"
        android:icon="@drawable/next"
        />
    <item android:id="@+id/search"
        android:title="@string/search"
        android:orderInCategory="3333"
        app:showAsAction="always"
        android:icon="@drawable/search"
        />


</menu>